[project]
name = "osm-boundary-feed"
version = "0.1.0"
description = "Generates feeds of OSM changes within defined boundaries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.13.3",
    "feedgen==1.0.0",
    "humanfriendly==10.0",
    "lxml==5.3.1",
    "markdown==3.7",
    "osmium==4.0.2",
    "pydantic==2.10.6",
    "python-dateutil==2.9.0",
    "requests-cache==1.2.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "typer==0.15.2",
]

[project.scripts]
osm-boundary-feed = "osm_boundary_feed.main:cli"

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "coverage==7.7.1",
    "ruff==0.11.2",
    "pyright==1.1.398",
    "pyinstrument==5.0.1",
]

[tool.coverage]
run.branch = true
report.fail_under = 60
report.skip_covered = true
report.show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osm_boundary_feed"]
